refactor: layout and project images

--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
       <title>Bobby Schade | JavaScript Developer</title>
 
       <link
-        href="https://fonts.googleapis.com/css?family=Arvo&display=swap"
+        href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap"
+        rel="stylesheet"
+      />
+      <link
+        href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
         rel="stylesheet"
       />
       <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
       />
-      <link rel="stylesheet" type="text/css" href="./style.css" />
+      <link rel="stylesheet" type="text/css" href="css/style.css" />
+      <link
+        rel="stylesheet"
+        media="screen and (max-width: 768px)"
+        href="css/mobile.css"
+      />
     </head>
 
     <body id="home">
@@ -21,54 +30,26 @@
         <div class="container">
           <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#showcase">About</a></li>
             <li><a href="#work">Work</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
 
-      <header id="photo">
-        <div class="photo-content">
-          <h1 class="md-heading">Bobby Schade</h1>
-          <h3 class="md-heading">JavaScript Developer</h3>
-        </div>
-      </header>
-
-      <header id="showcase" class="py-3">
-        <div class="container">
-          <h3 class="text-primary md-heading">About Bobby Schade</h3>
-          <div class="about">
-            <div class="showcase-image">
-              <img id="profile-picture" src="./images/profilepic.png" />
-            </div>
-            <div class="showcase-text">
-              <p>
-                I started with web development in early 2019, shortly after I
-                relocated from Cleveland, Ohio to Houston, Texas. Now, it's
-                practially all I do.
-              </p>
-              <p>
-                Thus far, I've done personal projects which can be seen below
-                and on my GitHub. I am open for freelance work but am also eager
-                to join a collaborative team solving intersting challenges.
-                Above all else, I am interested in building useful tools that
-                delight their users.
-              </p>
-              <p>
-                In my free time, I enjoy good music, television, and movies, as
-                well as sports; especially playing tennis and basketball.
-              </p>
-            </div>
+      <header id="showcase">
+        <div class="showcase-content">
+          <div class="text-container">
+            <h1 class="lg-heading">Bobby Schade</h1>
+            <h3 class="lg-heading">JavaScript Developer</h3>
           </div>
         </div>
       </header>
 
       <section id="work" class="py-2">
-        <h2 class="lg-heading">Projects</h2>
-
-        <div class="projects">
-          <div class="project">
+        <h2 class="lg-heading">Work</h2>
+        <div class="projects container">
+          <div class="project card">
             <div class="project-heading">
               <p class="project-title">
                 Issue Tracker
@@ -94,7 +75,7 @@
               />
             </a>
           </div>
-          <div class="project">
+          <div class="project card">
             <div class="project-heading">
               <p class="project-title">To-Do List</p>
               <a
@@ -119,7 +100,7 @@
             </a>
           </div>
 
-          <div class="project">
+          <div class="project card">
             <div class="project-heading">
               <p class="project-title">Recipe Collection</p>
               <a
@@ -144,7 +125,7 @@
               />
             </a>
           </div>
-          <div class="project">
+          <div class="project card">
             <div class="project-heading">
               <p class="project-title">Simon Game</p>
               <a
@@ -169,7 +150,7 @@
               />
             </a>
           </div>
-          <div class="project">
+          <div class="project card">
             <div class="project-heading">
               <p class="project-title">Wikipedia Viewer</p>
               <a
@@ -194,7 +175,7 @@
               />
             </a>
           </div>
-          <div class="project-container">
+          <div class="project card">
             <div class="project-heading">
               <p class="project-title">Tic-Tac-Toe</p>
               <a
@@ -218,6 +199,37 @@
                 alt="project"
               />
             </a>
+          </div>
+        </div>
+      </section>
+
+      <section id="about" class="py-3">
+        <div class="container">
+          <h3 class="text-primary lg-heading">About Bobby Schade</h3>
+          <div class="about-content">
+            <div class="about-image">
+              <img id="profile-picture" src="./images/profilepic.png" />
+            </div>
+            <div class="about-text">
+              <p>
+                I started with web development in early 2019, shortly after I
+                relocated from Cleveland, Ohio to Houston, Texas. Over time,
+                I've become increasingly excited and motived to learn more and
+                improve.
+              </p>
+              <p>
+                My work can be seen below as well as on my GitHub (link in
+                footer). I am open for freelance work but am also eager to join
+                a collaborative team solving intersting challenges. Above all
+                else, I am interested in building useful tools that delight
+                their users.
+              </p>
+              <p>
+                In my free time, I enjoy good music, television, and movies, as
+                well as sports; I love playing tennis, basketball, and
+                ping-pong.
+              </p>
+            </div>
           </div>
         </div>
       </section>
