--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="format-detection" content="telephone=no" />
       <title>Bobby Schade | JavaScript Developer</title>
 
       <link
@@ -218,7 +219,7 @@
                 improve.
               </p>
               <p>
-                My work can be seen below as well as on my GitHub (link in
+                My work can be seen above as well as on my GitHub (link in
                 footer). I am open for freelance work but am also eager to join
                 a collaborative team solving intersting challenges. Above all
                 else, I am interested in building useful tools that delight
@@ -234,7 +235,7 @@
         </div>
       </section>
 
-      <section id="contact" class="py-2">
+      <footer id="contact" class="py-2">
         <h3>Robert W. Schade</h3>
         <address>
           <h3 id="contact">bschade.18@gmail.com</h3>
@@ -261,7 +262,7 @@
           <h4>HTML, CSS, JavaScript, React</h4>
           <h4>Node, MongoDB, Mongoose, Redux</h4>
         </div>
-      </section>
+      </footer>
 
       <!-- jQuery CDN -->
       <script
