add moviecity image and link, replace tictactoe

--- a/index.html
+++ b/index.html
@@ -78,6 +78,31 @@
           </div>
           <div class="project card">
             <div class="project-heading">
+              <p class="project-title">MovieCity</p>
+              <a
+                class="code-link"
+                href="https://github.com/bschade18/moviecity"
+                target="_blank"
+              >
+                <i class="fab fa-github code-icon"></i>
+              </a>
+            </div>
+
+            <a
+              id="moviecity-link"
+              class="portfolio-link"
+              href="https://safe-everglades-82919.herokuapp.com/"
+              target="_blank"
+            >
+              <img
+                class="project-image"
+                src="./images/moviecity.png"
+                alt="project"
+              />
+            </a>
+          </div>
+          <div class="project card">
+            <div class="project-heading">
               <p class="project-title">To-Do List</p>
               <a
                 class="code-link"
@@ -172,31 +197,6 @@
               <img
                 class="project-image"
                 src="./images/wiki.png"
-                alt="project"
-              />
-            </a>
-          </div>
-          <div class="project card">
-            <div class="project-heading">
-              <p class="project-title">Tic-Tac-Toe</p>
-              <a
-                class="code-link"
-                href="https://github.com/bschade18/tictactoev2/tree/master"
-                target="_blank"
-              >
-                <i class="fab fa-github code-icon"></i>
-              </a>
-            </div>
-
-            <a
-              id="tic-tac-link"
-              class="portfolio-link"
-              href="https://bschade18.github.io/tictactoev2/"
-              target="_blank"
-            >
-              <img
-                class="project-image"
-                src="./images/tictactoe.png"
                 alt="project"
               />
             </a>
