--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
       <meta name="format-detection" content="telephone=no" />
       <title>Bobby Schade | JavaScript Developer</title>
 
+      <meta
+        name="description"
+        content="Welcome to the portfolio page for JavaScropt developer Bobby Schade."
+      />
+      <meta
+        name="keywords"
+        content="bobby, schade, bobbyschade, developer, javascript, programmer"
+      />
       <link
         href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap"
         rel="stylesheet"
