added bootstrap and git to skills

--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
           </a>
         </div>
         <div class="content-skills">
-          <h4>HTML, CSS, JavaScript, React</h4>
-          <h4>Node, MongoDB, Mongoose, Redux</h4>
+          <h4>HTML, CSS, JavaScript, React, Redux</h4>
+          <h4>Node, MongoDB, Mongoose, Bootstrap, Git</h4>
         </div>
       </footer>
 
