fixed typo in site description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
       <meta
         name="description"
-        content="Welcome to the portfolio page for JavaScropt developer Bobby Schade."
+        content="Welcome to the portfolio page for JavaScript developer Bobby Schade."
       />
       <meta
         name="keywords"
