--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         name="keywords"
         content="bobby, schade, bobbyschade, developer, javascript, programmer"
       />
+      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
       <link
         href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap"
         rel="stylesheet"
