fixed typo in about me

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               <p>
                 My work can be seen above as well as on my GitHub (link in
                 footer). I am open for freelance work but am also eager to join
-                a collaborative team solving intersting challenges. Above all
+                a collaborative team solving interesting challenges. Above all
                 else, I am interested in building useful tools that delight
                 their users.
               </p>
