--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
               >
                 <i class="fab fa-github code-icon"></i>
               </a>
+              <a
+                class="code-link"
+                href="https://www.youtube.com/watch?v=Lu-oZuTON64&t=16s"
+                target="_blank"
+              >
+                <i class="fab fa-youtube code-icon"></i>
+              </a>
             </div>
             <a
               id="issue-tracker-link"
@@ -94,6 +101,13 @@
                 target="_blank"
               >
                 <i class="fab fa-github code-icon"></i>
+              </a>
+              <a
+                class="code-link"
+                href="https://www.youtube.com/watch?v=siwF09i_4BM&feature=youtu.be"
+                target="_blank"
+              >
+                <i class="fab fa-youtube code-icon"></i>
               </a>
             </div>
 
