--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <a
               id="moviecity-link"
               class="portfolio-link"
-              href="https://safe-everglades-82919.herokuapp.com/"
+              href="https://rocky-shore-27082.herokuapp.com/"
               target="_blank"
             >
               <img
@@ -244,13 +244,11 @@
               <p>
                 My work can be seen above as well as on my GitHub (link in
                 footer). I am open for freelance work but am also eager to join
-                a collaborative team solving interesting challenges. Above all
-                else, I am interested in building useful tools that delight
-                their users.
+                a collaborative team solving interesting challenges.
               </p>
               <p>
                 In my free time, I enjoy good music, television, and movies, as
-                well as sports; I love playing tennis, basketball, and
+                well as sports; I love playing tennis, basketball, golf and
                 ping-pong.
               </p>
             </div>
