fixed tracker youtube link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </a>
               <a
                 class="code-link"
-                href="https://www.youtube.com/watch?v=Lu-oZuTON64&t=16s"
+                href="https://www.youtube.com/watch?v=Lu-oZuTON64"
                 target="_blank"
               >
                 <i class="fab fa-youtube code-icon"></i>
