--- a/index.html
+++ b/index.html
@@ -237,9 +237,11 @@
             <div class="about-text">
               <p>
                 I started with web development in early 2019, shortly after I
-                relocated from Cleveland, Ohio to Houston, Texas. Over time,
-                I've become increasingly excited and motived to learn more and
-                improve.
+                relocated from Cleveland, Ohio to Houston, Texas. Over time, I
+                have become increasingly excited and motivated to learn more and
+                improve my skills. I love knowing that nearly anything I can
+                imagine to build is possible if I, or a team, commit to making
+                it happen.
               </p>
               <p>
                 My work can be seen above as well as on my GitHub (link in
@@ -247,8 +249,8 @@
                 a collaborative team solving interesting challenges.
               </p>
               <p>
-                In my free time, I enjoy good music, television, and movies, as
-                well as sports; I love playing tennis, basketball, golf and
+                When I'm not coding, I enjoy good music, television, and movies,
+                as well as sports; I love playing tennis, basketball, golf, and
                 ping-pong.
               </p>
             </div>
