new moviecity photo and youtube link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </a>
               <a
                 class="code-link"
-                href="https://www.youtube.com/watch?v=siwF09i_4BM&feature=youtu.be"
+                href="https://youtu.be/x8pmcCkMUfk"
                 target="_blank"
               >
                 <i class="fab fa-youtube code-icon"></i>
